[package]
name = "make-polar-rs"
version = "0.1.0"
authors = ["Kevin-Neil Klop <kevin.klop@yahoo.com"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.6"
libgraphicimage-slint = { path = "../libgraphicimage-slint" }
libnmea0183 = { path = "../libnmea0183" }
clap = { version = "4.5.7", features = ["derive"] }
chrono = "0.4.38"

[build-dependencies]
slint-build = "1.6"
